Fix displaying of image identifier and mobile image popup alignment.

--- a/themes/finna2/less/finna/image-popup.less
+++ b/themes/finna2/less/finna/image-popup.less
@@ -499,7 +499,7 @@
             padding: 10px 0px 0px;
             max-width: 800px;
         }
-        .popup-link-buttons {
+        .popup-link-buttons, .record-link {
             padding-left: 20px;
         }
         .content h3 {
@@ -512,6 +512,9 @@
         .image-rights {
             padding: 10px 0px;
             margin: 0px 20px 10px;
+        }
+        .image-details {
+            text-align: left;
         }
     }
 }
